--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.1.1",
     "framer-motion": "^6",
     "next": "13.1.1",
+    "preact": "^10.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
