--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "devark-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
-    "framer-motion": "^6",
-    "next": "13.1.1",
-    "preact": "^10.11.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "cssnano": "^5.1.14",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
-  }
+    "name": "devark-website",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11",
+        "@emotion/styled": "^11",
+        "@next/font": "13.1.1",
+        "@types/node": "18.11.18",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.10",
+        "eslint-config-next": "13.1.1",
+        "framer-motion": "^6",
+        "next": "13.1.1",
+        "preact": "^10.11.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "4.9.4"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
+        "autoprefixer": "^10.4.13",
+        "cssnano": "^5.1.14",
+        "eslint": "8.31.0",
+        "eslint-config-prettier": "^8.7.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "postcss": "^8.4.20",
+        "prettier": "^2.8.4",
+        "tailwindcss": "^3.2.4"
+    }
 }
