--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "@emotion/react": "^11",
         "@emotion/styled": "^11",
+        "@headlessui/react": "^1.7.13",
         "@next/font": "13.1.1",
+        "@tabler/icons-react": "^2.10.0",
         "@types/node": "18.11.18",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.10",
@@ -33,6 +35,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "postcss": "^8.4.20",
         "prettier": "^2.8.4",
+        "prettier-plugin-tailwindcss": "^0.2.4",
         "tailwindcss": "^3.2.4"
     }
 }
