--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "preact": "^10.11.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "swiper": "^9.1.0",
         "typescript": "4.9.4"
     },
     "devDependencies": {
